<resources>
    <string name="app_name" translatable="false">CosaCompro</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="default_list_title">Default list</string>
    <string name="default_list_summary">Select the list that will be loaded on startup.</string>

    <!-- DBBackup-->
    <string name="dbbackup_import_title">Import DB!</string>
    <string name="dbbackup_import_ok">Holy cow if I imported it!</string>
    <string name="dbbackup_export_title">Export DB!</string>
    <string name="dbbackup_export_ok">Holy cow if I exported it!</string>

    <!-- ScanProduct -->
    <string name="action_scanProduct">Scan Product</string>
    <string name="ScanProduct_optionTitleMessage">No Product found with that barcode. Whatcha gonna do, brother?</string>
    <string name="ScanProduct_optionAddProduct">Add Product</string>
    <string name="ScanProduct_optionGoBackHome">Go back Home</string>
    <string name="ScanProduct_scanButtonText">SCAN FOR YOUR LIFE!</string>
    <string name="ScanProduct_barcodeTextviewText">Barcode:</string>
    <string name="ScanProduct_formatTextviewText">Format:</string>

    <!-- ManageList -->
    <string name="manageList_title">Manage List</string>

    <!-- ManageSellers -->
    <string name="action_manageSellers">Manage Sellers</string>
    <string name="title_seller_list">Manage Seller</string>
    <string name="title_seller_info">Seller Info</string>
    <string name="title_seller_add">Add Seller</string>
    <string name="title_seller_edit">Edit Seller</string>
    <string name="seller_duplicate_error">ooops! You tried to add a seller that already exists!</string>

    <!-- ManageProducts -->
    <string name="action_manageProducts">Manage Products</string>
    <string name="title_product_list">Manage Product</string>
    <string name="title_product_info">Product Info</string>
    <string name="title_product_add">Add Product</string>
    <string name="title_product_edit">Edit Product</string>
    <string name="product_duplicate_error">ooops! You tried to add a product that already exists!</string>

    <!-- ManageProductPrices -->
    <string name="action_manageProductPrices">Manage Product Prices</string>
    <string name="title_productprice_list">Manage Product Price</string>
    <string name="title_productprice_info">Product Price Info</string>
    <string name="title_productprice_add">Add Product Price</string>
    <string name="title_productprice_edit">Edit Product Price</string>
    <string name="productprice_duplicate_error">ooops! You tried to add a product price that already exists!</string>

    <!-- ManageProductPrices -->
    <string name="action_manageGLists">Manage Lists</string>
    <string name="title_glist_list">Manage List</string>
    <string name="title_glist_info">List Info</string>
    <string name="title_glist_add">Add List</string>
    <string name="title_glist_edit">Edit List</string>
    <string name="glist_duplicate_error">ooops! You tried to add a list that already exists!</string>

    <!-- Seller fields-->
    <string name="seller_field_seller_name">Seller</string>
    <string name="seller_field_address">Address</string>
    <string name="seller_field_city">City</string>

    <!-- Product fields -->
    <string name="product_field_product_name">Product</string>
    <string name="product_field_brand">Brand</string>
    <string name="product_field_category">Category</string>
    <string name="product_field_barcode">Barcode</string>
    <string name="product_field_description">Description</string>

    <!-- Nothing -->
    <string name="notification_text">Ma vai a lavurà! Cialtrùn!</string>
</resources>
