<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="yithian.cosacompro.MainActivity">
    <item
        android:id="@+id/action_manageLists"
        android:orderInCategory="101"
        android:title="@string/action_manageGLists"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manageSellers"
        android:orderInCategory="102"
        android:title="@string/action_manageSellers"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manageProducts"
        android:orderInCategory="103"
        android:title="@string/action_manageProducts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manageProductPrices"
        android:orderInCategory="104"
        android:title="@string/action_manageProductPrices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scanProduct"
        android:orderInCategory="105"
        android:title="@string/action_scanProduct"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="106"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
