<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="5"
    tools:context="yithian.cosacompro.scan_product.ScanProductActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:onClick="scanProduct_click"
            android:text="@string/ScanProduct_scanButtonText" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:layout_row="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/ScanProduct_barcodeTextviewText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/barcodeContent_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/ScanProduct_formatTextviewText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/barcodeFormat_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp">

        <View style="@style/Divider" />
    </TableRow>

    <GridLayout
        android:id="@+id/ScanProduct_productinfo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Product:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Brand:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_brand_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Category:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_category_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Description:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View all prices for this thingy!"
                android:id="@+id/view_pricelist_button" />
        </TableRow>
    </GridLayout>

    <GridLayout
        android:id="@+id/ScanProduct_addProduct_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ScanProduct_optionTitleMessage"
                android:id="@+id/addProduct_message_textview"
                android:textAlignment="center"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addProduct_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ScanProduct_optionAddProduct"
                android:onClick="addProduct_click" />
        </TableRow>

    </GridLayout>

</GridLayout>
